# that_dsp_library

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md
examples/: CMakeLists.txt  control_signal_example.cpp  signal_example.cpp
include/: control_signal.h  signal.h
include/arithmetic/: mac.hpp
src/arithmetic/: mac.cpp  square.cpp
test/: CMakeLists.txt  control_signal_test.cpp  signal_test.cpp
test/arithmetic/: mac_test.cpp  square_test.cpp
